[package]
name = "hotline-bookmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
macroman-tools = { path = "../macroman-tools" }
serde = { version = "1.0.137", features = ["derive"] }
