[package]
name = "hotline-tracker-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.18", features = ["derive", "cargo", "wrap_help"] }
futures = "0.3.21"
futures-sink = "0.3.21"
hotline-tracker = { path = "../hotline-tracker" }
macroman-tools = { path = "../macroman-tools" }
serde_json = "1.0.81"
termion = "1.5.6"
tokio = { version = "1.18.0", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.1", features = ["codec"] }
